--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="cointainer">
+    <div class="container">
         <!-- header section -->
         <header>
                     <!-- left section -->
@@ -41,12 +41,18 @@
                                                     <p>Essie Howell</p>
                                             </div>
                                             <div class="right symbol">
-                                                    <p>+</p>
+                                                    <button class="btn">+</button>
+                                                    <nav class="btn-content">
+                                                        <a href="#"><span class="material-symbols-outlined">notifications</span>Inbox</a>
+                                                        <a href="#"><span class="material-symbols-outlined">person</span>Profile</a>
+                                                        <a href="#"><span class="material-symbols-outlined">power_settings_new</span>Log Out</a>
+                                                    </nav>
                                             </div>
                             </div>
                    </div>
         </header>
     <div class="main">
+        <a href="#" class="inbox"><div class="bell"><span class="material-symbols-outlined">notifications</span></div></a>
         <!-- Aside section -->
          <div class="leftsection contain">
             <div class="leftavatar">
