--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <!-- header section -->
-        <header>
+        <div class="head">
                     <!-- left section -->
                    <div class="header">
                             <div class="topleft top">
@@ -50,7 +50,7 @@
                                             </div>
                             </div>
                    </div>
-        </header>
+                </div>
     <div class="main">
         <a href="#" class="inbox"><div class="bell"><span class="material-symbols-outlined">notifications</span></div></a>
         <!-- Aside section -->
