updated desktop view

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     <div class="imgdiv top"></div>
                                     <div class="meet-contain top">
                                             <div class="meettitle">Design Catchup</div>                                   
-                                            <div class="meettitle meetemail">adellac@josianne.com</div>
+                                            <div class="meetemail">adellac@josianne.com</div>
                                             <div class="meettime">10:30 AM</div>
                                      </div>
                                 </div>
@@ -169,7 +169,7 @@
                                     <div class="imgdiv1 top"></div>
                                     <div class="meet-contain1 top">
                                             <div class="meettitle1">Sales Presentation</div>                                   
-                                            <div class="meettitle1 meetemail1">adams_ka@gmail.com</div>
+                                            <div class="meetemail1">adams_ka@gmail.com</div>
                                             <div class="meettime1">11:30 AM</div>
                                      </div>
                                 </div>
@@ -203,7 +203,7 @@
                                     <div class="imgdiv2 top"></div>
                                     <div class="meet-contain2 top">
                                             <div class="meettitle2">Daily Meeting</div>                                   
-                                            <div class="meettitle2 meetemail2">johnson.eva@santos.com</div>
+                                            <div class="meetemail2">johnson.eva@santos.com</div>
                                             <div class="meettime2">12:00 PM</div>
                                      </div>
                                 </div>
@@ -239,7 +239,7 @@
                                     <div class="imgdiv3 top"></div>
                                     <div class="meet-contain3 top">
                                             <div class="meettitle3">Testing Vol.1</div>                                   
-                                            <div class="meettitle3 meetemail3">amde@gament.com</div>
+                                            <div class="meetemail3">amde@gament.com</div>
                                             <div class="meettime3">2:30 PM</div>
                                      </div>
                                 </div>
@@ -273,7 +273,7 @@
                                     <div class="imgdiv4 top"></div>
                                     <div class="meet-contain4 top">
                                             <div class="meettitle4">Collaboration</div>                                   
-                                            <div class="meettitle4 meetemail3">cadu@egament.com</div>
+                                            <div class=" meetemail3">cadu@egament.com</div>
                                             <div class="meettime4">5:30 PM</div>
                                      </div>
                                 </div>
@@ -307,7 +307,7 @@
                                     <div class="imgdiv5 top"></div>
                                     <div class="meet-contain5 top">
                                             <div class="meettitle5">Tech Talk</div>                                   
-                                            <div class="meettitle5 meetemail3">luni@egament.com</div>
+                                            <div class=" meetemail3">luni@egament.com</div>
                                             <div class="meettime5">6:00 PM</div>
                                      </div>
                                 </div>
