--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <p>Today-6 Meetings </p>
                 </div>
                 <div class="Tmeeting">
-                            <div class="meeting1">
+                            <div class="meeting1 content">
                                 <div class="topmeet">
                                     <div class="imgdiv top"></div>
                                     <div class="meet-contain top">
@@ -164,7 +164,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="meeting2">
+                            <div class="meeting2 content">
                                 <div class="topmeet1">
                                     <div class="imgdiv1 top"></div>
                                     <div class="meet-contain1 top">
@@ -198,7 +198,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="meeting3">
+                            <div class="meeting3 content">
                                 <div class="topmeet2">
                                     <div class="imgdiv2 top"></div>
                                     <div class="meet-contain2 top">
@@ -232,9 +232,7 @@
                                     </div>
                                 </div>
                             </div>
-                    </div>
-                    <div class="Tmeeting1">
-                            <div class="meeting4">
+                            <div class="meeting4 content">
                                 <div class="topmeet3">
                                     <div class="imgdiv3 top"></div>
                                     <div class="meet-contain3 top">
@@ -268,7 +266,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="meeting5">
+                            <div class="meeting5 content">
                                 <div class="topmeet4">
                                     <div class="imgdiv4 top"></div>
                                     <div class="meet-contain4 top">
@@ -302,7 +300,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="meeting6">
+                            <div class="meeting6 content">
                                 <div class="topmeet5">
                                     <div class="imgdiv5 top"></div>
                                     <div class="meet-contain5 top">
@@ -335,7 +333,7 @@
                                         <a href="#" ><div class="details5">View Details</div></a>
                                     </div>
                                 </div>
-                            </div>
+                        </div>
                     </div>
     </div>
 </div>
