--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="maincontainer">
     <div class="container">
         <!-- header section -->
         <div class="head">
@@ -336,6 +337,7 @@
                         </div>
                     </div>
     </div>
+</div>
 </div>
 </body>
 </html>
